[gd_scene load_steps=18 format=2]

[ext_resource path="res://ui_entities/bottom_count_item.tscn" type="PackedScene" id=1]
[ext_resource path="res://ui_elements/OsnovaInterf.png" type="Texture" id=2]
[ext_resource path="res://ui_elements/PodRamka.png" type="Texture" id=3]
[ext_resource path="res://ui_elements/RandomBox_Lvl3.png" type="Texture" id=4]
[ext_resource path="res://ui_elements/RandomBox_Lvl5.png" type="Texture" id=5]
[ext_resource path="res://ui_elements/RandomBox_Lvl1.png" type="Texture" id=6]
[ext_resource path="res://ui_elements/qun3aZQmAys.jpg" type="Texture" id=7]
[ext_resource path="res://ui_elements/STR.png" type="Texture" id=8]
[ext_resource path="res://ui_elements/Magic.png" type="Texture" id=9]
[ext_resource path="res://ui_elements/RamkaHPMANAMONEY.png" type="Texture" id=10]
[ext_resource path="res://ui_elements/HP.png" type="Texture" id=11]
[ext_resource path="res://ui_entities/top_left_counter.tscn" type="PackedScene" id=12]
[ext_resource path="res://ui_elements/MP.png" type="Texture" id=13]
[ext_resource path="res://ui_elements/RamkaSettings.png" type="Texture" id=14]
[ext_resource path="res://ui_elements/Settings.png" type="Texture" id=15]
[ext_resource path="res://scripts/game_interface_controller.gd" type="Script" id=16]
[ext_resource path="res://ui_elements/fonts/mistral.tres" type="DynamicFont" id=17]

[node name="GameInterface" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 16 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="qun3aZQmAys" type="Sprite" parent="."]
visible = false
texture = ExtResource( 7 )
centered = false

[node name="Top" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 0.204
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Left" type="Control" parent="Top"]
margin_right = 70.24
margin_bottom = 127.104
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="NinePatchRect" parent="Top/Left"]
anchor_left = -0.014
anchor_top = -0.008
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -0.01664
margin_top = 0.016832
margin_right = -0.239998
margin_bottom = -0.103996
size_flags_horizontal = 15
size_flags_vertical = 15
texture = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CounterContainer" type="VBoxContainer" parent="Top/Left"]
margin_left = 4.49536
margin_top = 11.3122
margin_right = 44.4954
margin_bottom = 114.483
alignment = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="HealthContainer" type="CenterContainer" parent="Top/Left/CounterContainer"]
margin_right = 40.0
margin_bottom = 31.0
size_flags_horizontal = 7
size_flags_vertical = 7

[node name="Label" type="Label" parent="Top/Left/CounterContainer/HealthContainer"]
margin_left = 13.0
margin_top = 6.0
margin_right = 27.0
margin_bottom = 25.0
custom_fonts/font = ExtResource( 17 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "11"
align = 1
valign = 1

[node name="NinePatchRect" type="NinePatchRect" parent="Top/Left/CounterContainer/HealthContainer"]
margin_left = 5.0
margin_right = 35.0
margin_bottom = 30.0
rect_min_size = Vector2( 30, 30 )
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource( 11 )

[node name="MoneyContainer" parent="Top/Left/CounterContainer" instance=ExtResource( 12 )]
margin_top = 35.0
margin_right = 40.0
margin_bottom = 67.0

[node name="HBoxContainer2" parent="Top/Left/CounterContainer" instance=ExtResource( 12 )]
margin_top = 71.0
margin_right = 40.0
margin_bottom = 103.0
size_flags_vertical = 11

[node name="NinePatchRect" parent="Top/Left/CounterContainer/HBoxContainer2" index="0"]
margin_top = 7.0
margin_bottom = 25.0
size_flags_horizontal = 5
texture = ExtResource( 13 )
axis_stretch_horizontal = 1
axis_stretch_vertical = 1

[node name="Label" parent="Top/Left/CounterContainer/HBoxContainer2" index="1"]
margin_right = 40.0
margin_bottom = 32.0
text = "11"

[node name="Right" type="Control" parent="Top"]
anchor_left = 0.822
anchor_right = 1.0
anchor_bottom = 0.388
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="Top/Right"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -47.84
margin_top = -1.0
margin_right = 2.16
margin_bottom = 50.0
mouse_filter = 2
size_flags_horizontal = 0
size_flags_vertical = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="NinePatchRect" parent="Top/Right/CenterContainer"]
margin_right = 50.0
margin_bottom = 50.0
rect_min_size = Vector2( 50, 50 )
size_flags_horizontal = 15
size_flags_vertical = 15
texture = ExtResource( 14 )

[node name="TextureButton" type="TextureButton" parent="Top/Right"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -37.5362
margin_top = 7.15333
margin_right = -7.53621
margin_bottom = 37.1533
rect_min_size = Vector2( 30, 30 )
size_flags_horizontal = 0
size_flags_vertical = 0
texture_normal = ExtResource( 15 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bottom" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -140.0
margin_top = -109.0
margin_right = 140.0
mouse_filter = 2
size_flags_horizontal = 0
size_flags_vertical = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="NinePatchRect" parent="Bottom"]
anchor_left = 0.161
anchor_top = 0.183
anchor_right = 0.843
anchor_bottom = 1.0
margin_left = -0.0800018
margin_top = 0.0529995
margin_right = -0.0400085
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Border" type="NinePatchRect" parent="Bottom"]
anchor_top = -0.0550459
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
axis_stretch_horizontal = 2
axis_stretch_vertical = 2
__meta__ = {
"_edit_use_anchors_": true
}

[node name="CountContainer" type="HBoxContainer" parent="Bottom"]
anchor_left = 0.353571
anchor_top = -0.192661
anchor_right = 0.646429
anchor_bottom = 0.119266
size_flags_horizontal = 6
size_flags_vertical = 6
alignment = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Stg" parent="Bottom/CountContainer" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 24.0
margin_bottom = 34.0

[node name="Label" parent="Bottom/CountContainer/Stg" index="0"]
margin_right = 24.0

[node name="NinePatchRect" parent="Bottom/CountContainer/Stg" index="1"]
margin_left = 4.0
margin_top = 19.0
margin_right = 19.0
margin_bottom = 34.0
texture = ExtResource( 8 )

[node name="CenterContainer" parent="Bottom/CountContainer/Stg" index="2"]
margin_right = 32.0
margin_bottom = 34.0

[node name="Agl" parent="Bottom/CountContainer" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 28.0
margin_right = 53.0
margin_bottom = 34.0

[node name="Label" parent="Bottom/CountContainer/Agl" index="0"]
margin_right = 25.0

[node name="NinePatchRect" parent="Bottom/CountContainer/Agl" index="1"]
margin_left = 5.0
margin_top = 19.0
margin_right = 20.0
margin_bottom = 34.0

[node name="Int" parent="Bottom/CountContainer" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 57.0
margin_right = 82.0
margin_bottom = 34.0

[node name="Label" parent="Bottom/CountContainer/Int" index="0"]
margin_right = 25.0

[node name="NinePatchRect" parent="Bottom/CountContainer/Int" index="1"]
margin_left = 5.0
margin_top = 19.0
margin_right = 20.0
margin_bottom = 34.0
texture = ExtResource( 9 )

[node name="CenterContainer" parent="Bottom/CountContainer/Int" index="2"]
margin_right = 33.0
margin_bottom = 34.0

[node name="ItemContainer" type="HBoxContainer" parent="Bottom"]
anchor_left = 0.217857
anchor_top = 0.201833
anchor_right = 0.782143
anchor_bottom = 0.999998
alignment = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Tower1" type="TextureButton" parent="Bottom/ItemContainer"]
margin_right = 50.0
margin_bottom = 87.0
rect_min_size = Vector2( 50, 50 )
size_flags_horizontal = 7
size_flags_vertical = 5
texture_normal = ExtResource( 6 )
expand = true
stretch_mode = 5

[node name="Tower3" type="TextureButton" parent="Bottom/ItemContainer"]
margin_left = 54.0
margin_right = 104.0
margin_bottom = 87.0
rect_min_size = Vector2( 50, 50 )
size_flags_horizontal = 7
size_flags_vertical = 5
texture_normal = ExtResource( 4 )
expand = true
stretch_mode = 5

[node name="Tower5" type="TextureButton" parent="Bottom/ItemContainer"]
margin_left = 108.0
margin_right = 158.0
margin_bottom = 87.0
rect_min_size = Vector2( 50, 50 )
size_flags_horizontal = 7
size_flags_vertical = 5
texture_normal = ExtResource( 5 )
expand = true
stretch_mode = 5
[connection signal="pressed" from="Bottom/ItemContainer/Tower1" to="." method="_on_tower_pressed" binds= [ 1 ]]
[connection signal="pressed" from="Bottom/ItemContainer/Tower3" to="." method="_on_tower_pressed" binds= [ 3 ]]
[connection signal="pressed" from="Bottom/ItemContainer/Tower5" to="." method="_on_tower_pressed" binds= [ 5 ]]

[editable path="Top/Left/CounterContainer/HBoxContainer2"]

[editable path="Bottom/CountContainer/Stg"]

[editable path="Bottom/CountContainer/Agl"]

[editable path="Bottom/CountContainer/Int"]
